# Blockchain

./: .gitignore
blockchains/blockchain_app/: block.test.js  config.js  package-lock.json  package.json
blockchains/blockchain_cpp/: CMakeLists.txt
blockchains/cpp_blockchain/: CMakeLists.txt  main.cpp
blockchains/cpp_blockchain/src/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  CMakeLists.txt  Transaction.cpp  Transaction.h  Transactions.cpp  Transactions.h  UtxoSet.cpp  UtxoSet.h  Wallet.cpp  Wallet.h  cryptography.cpp  cryptography.h  sha256.cpp  sha256.h
blockchains/cpp_blockchain/test/lib/googletest-master/googlemock/docs/: cheat_sheet.md  cook_book.md  gmock_faq.md
blockchains/cpp_blockchain/test/lib/googletest-master/googlemock/include/gmock/: gmock-actions.h  gmock-spec-builders.h
blockchains/cpp_blockchain/test/lib/googletest-master/googlemock/include/gmock/internal/: gmock-pp.h
blockchains/cpp_blockchain/test/lib/googletest-master/googletest/docs/: advanced.md  primer.md
blockchains/cpp_blockchain/test/lib/googletest-master/googletest/include/gtest/: gtest-typed-test.h
blockchains/cpp_blockchain/test/lib/googletest-master/googletest/include/gtest/internal/: gtest-param-util.h  gtest-port.h
blockchains/cpp_blockchain/test/lib/googletest-master/googletest/test/: BUILD.bazel
blockchains/cpp_blockchain/test/tests/: BlockTests.cpp  CMakeLists.txt  TransactionTests.cpp  blockTest.cpp  blockchainTest.cpp  cryptographyTest.cpp  cryptographyTests.cpp  sha256Test.cpp  tests.cpp
blockchains/cpp_tests_config/: CMakeLists.txt
blockchains/cpp_tests_config/src/: CMakeLists.txt
blockchains/cpp_tests_config/test/tests/: tests.cpp
blockchains/cpp_testy/: CMakeLists.txt  main.cpp
blockchains/cpp_testy/src/: Checkout.cpp  Checkout.h
blockchains/cpp_testy/test/: CMakeLists.txt
blockchains/cpp_testy/test/tests/: CMakeLists.txt
blockchains/node_js_blockchain/: block.js  blockchain.js  blockchain.test.js  crypto-hash.js  crypto-hash.test.js
blockchains/trai-blockchain/: pom.xml
blockchains/trai-blockchain/src/main/java/com/trai/blockchain/: App.java
blockchains/trai-blockchain/src/main/java/com/trai/blockchain/cryptography/: Base58.java  CurvePoint.java  ECDSA.java  EllipticCurve.java  EllipticCurvePoint.java  FieldElement.java  Point.java  Ripemd160.java  Secp256Element.java  Signature.java
blockchains/trai-blockchain/src/main/java/com/trai/blockchain/cryptography/secp256k1/: Secp256Element.java  Secp256EllipticCurve.java  Secp256Point.java
blockchains/trai-blockchain/src/test/java/com/trai/blockchain/: AppTest.java
blockchains/trai-blockchain/src/test/java/com/trai/blockchain/cryptographyTests/: CurvePointTest.java  ECDSATest.java  EllipticCurvePointTest.java  FieldElementTest.java  PointTest.java
smart_contracts/inbox/: compile.js  deploy.js  package-lock.json  package.json
smart_contracts/inbox/contracts/: Inbox.sol
smart_contracts/inbox/test/: Inbox.test.js
smart_contracts/solidity_contracts/: modifiers.sol  transaction.sol
